--- a/PM web thang/PM web thang/index.html
+++ b/PM web thang/PM web thang/index.html
@@ -3,111 +3,90 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>C.J.'s Cool Thang</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background: #ddd;
-      color: #333;
-      font-family: "Architects Daughter", cursive;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 20px;
-    }
+    <meta charset="utf-8">
+    <title>C.J.'s Cool Thang</title>
+    <link rel="shortcut icon" href="flower.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            color: #333;
+            font-family: "Silkscreen";
+            font-weight: 400;
+            font-style: normal;
+            font-size: 20px;
+        }
 
-    h1 {
-      font-weight: 900;
-      COLOR: #000;
-      text-align: center;
-    }
+        html {
+            background: url(webbackground.jpg) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
 
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      margin-left: auto;
-      margin-right: auto;
-      width: 550px;
-    }
+        h1 {
+            font-weight: 900;
+            COLOR: #000;
+            text-align: center;
+        }
 
-    .center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            margin-left: 0px;
+            width: 550px;
+        }
 
-    /* a {
-      color: rgb(162, 162, 219);
-      font-weight: 800;
-      text-decoration: none;
-      font-size: 20px;
-      transition: 1s font-size, 1s color;
-    }
-    a:hover{
-      color:rgb(138, 138, 205);
-      text-decoration: underline;
-      font-size: 30px;
-    }
-    */
-    a {
-      text-decoration: none;
-      color: black;
-      display: block;
-      background-color: rgb(187, 105, 241);
-      border: 2px solid rgb(152, 76, 202);
-      width: 150px;
-      text-align: center;
-      margin-top: 50px;
-      margin-left: 50px;
-      margin-right: 50px;
-      border-radius: 20px;
-      transition: 1s transform, 1s box-shadow;
-      box-shadow: 0 0 0 transparent;
-    }
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
 
-    a:hover {
-      transform: scale(2);
-      box-shadow: 0 10px 15px #b08cca;
-    }
+        .g {
+            margin-left: 30px;
+        }
 
-    li {
-      display: inline-block;
-    }
+        .image {
+            margin-left: 35px;
+        }
 
-    .glaggleland {
-      text-align: center;
-      width: 250px;
-      height: 250px;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: auto;
-      background-color: yellow;
-      border: 2px solid black;
-      font-size: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  </style>
+        a {
+            text-decoration: none;
+            color: black;
+            width: 150px;
+            margin-top: 50px;
+        }
+
+        li {
+            display: inline-block;
+        }
+    </style>
 </head>
 
 <body>
-  <h1><strong>WELCOME</strong></h1>
-  <p>My name is C.J. Feckovic😼</p>
-  <p>I <2 coding</p>
-      <p>I go to LCC and I code</p>
-      <p>I go home and I code</p>
-      <p>YIPPEEE</p>
-      <img src="images/potraitart.jpg" alt="self portait art" class="center" />
-      <ul>
-        <li><a href="text.html">Tortellini Info</a></li>
-        <li><a href="boxes.html">Other</a></li>
-      </ul>
-      <a href="glaggleland.html" class="glaggleland">GLAGGLE LAND</a>
+
+
+    <ul>
+        <li><a href="text.html"><img src="tortellini.png" alt="Tortellini" style="width:150px;height:150px;"></a></li>
+        <li><a href="boxes.html"><img src="folder.png" alt="Boxes" style="width:150px;height:150px;"></a></li>
+    </ul>
+    <ul>
+        <li><a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
+                    style="width:105px;height:105px;"></a></li>
+        <li><a href="images.html" class="image"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a>
+        </li>
+    </ul>
+    <div>
+        <ul>
+        <li><a href="positions.html"> Position boxes </a></li>
+        <li><a href="grid.html"> Grid thang </a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
