--- a/PM web thang/PM web thang/boxes.html
+++ b/PM web thang/PM web thang/boxes.html
@@ -45,6 +45,7 @@
         }
 
         .line4 {
+            font-size: 0px;
             opacity: 0%;
             padding: 1px;
             margin: 1px;
@@ -58,6 +59,11 @@
         .hand {
             font-family: "Patrick Hand";
             color: rgb(220, 220, 166);
+        }
+
+        .hand2 {
+            font-family: "Patrick Hand";
+            color: rgb(80, 144, 89);
         }
 
         .div1 {
@@ -85,7 +91,6 @@
         .div2 {
             background: rgb(175, 146, 254);
             width: auto;
-            height: auto;
             height: 55px;
             border: 5px dashed rgb(175, 146, 254);
             border-bottom: 40px solid rgb(165, 132, 255);
@@ -153,22 +158,51 @@
         .div4 {
             background: #bf3f3f;
             width: auto;
-            height: 100px;
+            height: 55px;
             border-bottom: 10px solid #cd5959;
             border-right: 40px solid #be2f2f;
             border-top: 40px solid #be2f2f;
             border-left: 10px solid #cd5959;
             border-radius: 50px;
-            margin-top: 0px;
-            margin-left:auto;
-            margin-right:auto;
-            padding-top: auto;
+            margin: 20px;
+            margin-top: 50px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 20px;
+            padding-top: -10px;
+            text-align: left;
         }
 
         .div4:hover {
             height: 1120px;
 
             .line4 {
+                font-size: 30px;
+                opacity: 100%;
+                transition: opacity .5s;
+            }
+        }
+        .div5 {
+            background: #f7b76a;
+            width: auto;
+            height: 100px;
+            border-bottom: 10px solid #ffdd88;
+            border-right: 40px solid #e29450;
+            border-top: 40px solid #e29450;
+            border-left: 10px solid #ffdd88;
+            border-radius: 50px;
+            margin-top: 50px;
+            margin-left: auto;
+            margin-right: auto;
+            padding-top: auto;
+            padding-left: 20px;
+        }
+
+        .div5:hover {
+            height: 1210px;
+
+            .line4 {
+                font-size: 30px;
                 opacity: 100%;
                 transition: opacity .5s;
             }
@@ -186,7 +220,13 @@
             margin-top: -200px;
         }
 
-      
+        .graphic {
+            margin-top: auto;
+        }
+
+        .graphic:hover {
+            margin-top: 0px;
+        }
     </style>
 </head>
 
@@ -239,6 +279,38 @@
         <p class="line4">Your corpse, now mine</p>
         <p class="line4">Our story complete</p>
         <p class="line4">I take one last breath as I become obsolete.</p>
+    </div>
+    <div class="div5 shadow hand2">
+        <p><strong>#3: What Does Pride Really mean?</strong></p>
+        <p class="line4">Confetti and glitter touch my skin.</p>
+        <p class="line4">I feel like a fish swimming around,</p>
+        <p class="line4">And these people are my fins.</p>
+        </br>
+        <p class="line4">The world tries to tell me this is wrong.</p>
+        <p class="line4">But Pride is in my ears,</p>
+        <p class="line4">And it is a song.</p>
+        </br>
+        <p class="line4">Regular life can be so mundane.</p>
+        <p class="line4">Then I’m with my people,</p>
+        <p class="line4">And I’m no longer in pain.</p>
+        </br>
+        <p class="line4">Sometimes I wonder</p>
+        <p class="line4">‘What does Pride really mean?’</p>
+        </br>
+        <p class="line4">Is it like a mouse to a cat,</p>
+        <p class="line4">Or a flower to a bee?</p>
+        </br>
+        <p class="line4">Or, perhaps, it is like a color for a person,</p>
+        <p class="line4">A rainbow in the sky.</p>
+        </br>
+        <p class="line4">Some say there is Pride in unity,</p>
+        <p class="line4">But for unity you must abide.</p>
+        </br>
+        <p class="line4">But then I’m back again.</p>
+        <p class="line4">With glitter on my skin.</p>
+        </br>
+        <p class="line4">Maybe pride is within us all,</p>
+        <p class="line4">And in our hearts it’s built-in.</p>
     </div>
     <div class="div3 shadow inner">
         <div class="hover">
