--- a/PM web thang/PM web thang/glaggleland.html
+++ b/PM web thang/PM web thang/glaggleland.html
@@ -10,39 +10,57 @@
         h1 {
             text-align: center;
         }
+
+        h6 {
+            opacity: 10%;
+        }
+
+        /*     .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }*/
+        a {
+            text-decoration: none;
+            opacity: 10%;
+            margin:0px;
+            
+        }
+
+        ul {
+            list-style-type: none;
+        }
+        .help:hover,
+        .dont:hover{
+            opacity: 20%;
+        }
     </style>
 </head>
 
 <body>
     <h1>WELCOME TO GLAGGLE LAND!!!!1!!!!!111!1</h1>
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <br/>
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland1" class="center" />
+    <h2>GET READY TO GET YOUR GLAGGLE ON : )</h2>
+    <br />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland2" class="center" />
+    <H3>HAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H3>
     </br>
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland3"
+        class="center" />
+    <H6>PLEASE HELP ME I CAN'T GET OUT</H6>
+    <ul>
+        <li><a href="Q.html" class="help">Help</a></li>
+        <li><a href="index.html" class="dont">Do not</a></li>
+    </ul>
+    <!--FYI take everything beyond this link as goofing around-->
+    <H1>AHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H1>
+
+    </br>
+    <audio controls autoplay>
+        <source src="Mii Apartments (Hungry) - Tomodachi Life OST.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 
 </html>
