--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         html {
-            background: url(webbackground.jpg) no-repeat center center fixed;
+            background: url(PM web thang/PM web thang/images/webbackground.jpg) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -72,19 +72,19 @@
 
 
     <ul>
-        <li><a href="text.html"><img src="tortellini.png" alt="Tortellini" style="width:150px;height:150px;"></a></li>
-        <li><a href="boxes.html"><img src="folder.png" alt="Boxes" style="width:150px;height:150px;"></a></li>
+        <li><a href="PM web thang/PM web thang/text.html"><img src="PM web thang/PM web thang/images/tortellini.png" alt="Tortellini" style="width:150px;height:150px;"></a></li>
+        <li><a href="PM web thang/PM web thang/boxes.html"><img src="PM web thang/PM web thang/images/folder.png" alt="Boxes" style="width:150px;height:150px;"></a></li>
     </ul>
     <ul>
-        <li><a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
+        <li><a href="PM web thang/PM web thang/glaggleland.html" class="g"><img src="PM web thang/PM web thang/images/glaggleweb.png" alt="GlaggleLand"
                     style="width:105px;height:105px;"></a></li>
-        <li><a href="images.html" class="image"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a>
+        <li><a href="PM web thang/PM web thang/images.html" class="image"><img src="PM web thang/PM web thang/images/image.png" alt="Images" style="width:105px;height:105px;"></a>
         </li>
     </ul>
     <div>
         <ul>
-        <li><a href="positions.html"> Position boxes </a></li>
-        <li><a href="grid.html"> Grid thang </a></li>
+        <li><a href="PM web thang/PM web thang/positions.html"> Position boxes </a></li>
+        <li><a href="PM web thang/PM web thang/grid.html"> Grid thang </a></li>
         </ul>
     </div>
 </body>
