--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         html {
-            background: url(PM web thang/PM web thang/images/webbackground.jpg) no-repeat center center fixed;
+            background: url("PM web thang/PM web thang/images/webbackground.jpg") no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
