--- a/PM web thang/PM web thang/glaggleland.html
+++ b/PM web thang/PM web thang/glaggleland.html
@@ -43,7 +43,7 @@
     <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland1" class="center" />
     <h2>GET READY TO GET YOUR GLAGGLE ON : )</h2>
     <br />
-    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland2" class="center" />
+    <img src="images/glaggleland-glaggle.gif" alt="glaggleland2" class="center" />
     <H3>HAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H3>
     </br>
     <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland3"
