--- a/text.html
+++ b/text.html
@@ -76,7 +76,7 @@ h6 {
 
   <h2>Thanks for watching</h2>
 
-  <p><a href="PM-demo-web-thang/index.html">Go Back</a></p>
+  <p><a href="index.html">Go Back</a></p>
 
 
 
