--- a/glaggleland.html
+++ b/glaggleland.html
@@ -40,13 +40,13 @@
 
 <body>
     <h1>WELCOME TO GLAGGLE LAND!!!!1!!!!!111!1</h1>
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland1" class="center" />
+    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland1" class="center" />
     <h2>GET READY TO GET YOUR GLAGGLE ON : )</h2>
     <br />
     <img src="images/glaggleland-glaggle.gif" alt="glaggleland2" class="center" />
     <H3>HAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H3>
     </br>
-    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland3"
+    <img src="images/static-assets-upload11758716458121278800.gif" alt="glaggleland3"
         class="center" />
     <H6>PLEASE HELP ME I CAN'T GET OUT</H6>
     <ul>
@@ -58,7 +58,7 @@
 
     </br>
     <audio controls autoplay>
-        <source src="Mii Apartments (Hungry) - Tomodachi Life OST.mp3" type="audio/mpeg">
+        <source src="images/Mii Apartments (Hungry) - Tomodachi Life OST.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
