--- a/glaggleland.html
+++ b/glaggleland.html
@@ -58,7 +58,7 @@
 
     </br>
     <audio controls autoplay>
-        <source src="images/Mii Apartments (Hungry) - Tomodachi Life OST.mp3" type="audio/mpeg">
+        <source src="Mii Apartments (Hungry) - Tomodachi Life OST (1).mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
