--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
         <li><a href="grid.html"> Grid thang </a></li>
         </ul>
     </div>
+     <ul>
+        <li><a href="seahorse.html"> Seahorse </a></li>
+        </ul>
 </body>
 
 </html>
