--- a/notfunny.html
+++ b/notfunny.html
@@ -5,7 +5,7 @@
     <style>
         body {
             background-color: grey;
-            background-image: url("noise1.gif");
+            background-image: url("images/noise1.gif");
         }
 
         p {
