--- a/grid.html
+++ b/grid.html
@@ -98,7 +98,7 @@
         </article>
         <div class="Ads">
             <a href="glaggleland.html"><img
-                    src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif">CLICK!!!!</a>
+                    src="images/static-assets-upload11758716458121278800.gif">CLICK!!!!</a>
         </div>
         <Header>
             <h1 class="center">Welcome to C.J.'s WACKY WEBSITE</h1>
