--- a/seahorse.html
+++ b/seahorse.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Seahorse Serenity</title>
+    <link rel="icon" type="image" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
