--- a/seahorse.html
+++ b/seahorse.html
@@ -14,12 +14,13 @@
             background: linear-gradient(#2b839b, #22687b);
             display: grid;
             grid-template-columns: 29% 70%;
-            grid-template-rows: 120px 2.2fr 120px;
+            grid-template-rows: 120px 2.2fr 120px 5px;
             gap: 2% 2%;
             grid-template-areas:
                 "Header Header"
                 "Navigation Main"
-                "Footer Footer";
+                "Footer Footer"
+                "copy copy";
             width: 90%;
             height: 1700px;
             margin: auto;
@@ -53,6 +54,8 @@
             color: transparent;
             background-clip: text;
             padding-left: -20px;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: black;
         }
 
         article h2 {
@@ -60,6 +63,8 @@
             color: #25beff;
             padding-bottom: 10px;
             font-size: 30px;
+            -webkit-text-stroke-width: .5px;
+            -webkit-text-stroke-color: black;
         }
 
         footer {
@@ -85,7 +90,7 @@
             background-image: url("images/lilypads.png");
             background-size: cover;
             font-family: "Permanent Marker";
-            height: 400px;
+            height: 530px;
         }
 
         header {
@@ -109,17 +114,19 @@
 
 
         nav a {
-            font-size: 20px;
+            font-size: 30px;
             display: block;
             margin: 20px;
             color: #23d39b;
-            transition: .5s;
+            transition: .5s all;
             text-decoration: none;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: black;
         }
 
         nav a:hover {
             transform: scale(1.3);
-            margin-left: 70px;
+            margin-left: 90px;
             color: #25beff;
         }
 
@@ -134,9 +141,13 @@
             background-image: linear-gradient(#25a4ff, #23d39b);
             color: transparent;
             background-clip: text;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: black;
+
         }
 
-        p {
+        .copy {
+            grid-area: copy;
             text-align: center;
             margin-top: -70px;
         }
@@ -233,7 +244,7 @@
 
     </footer>
 
-    <p>&copy; Seahorse Serenity 2024</p>
+    <p class="copy">&copy; Seahorse Serenity 2024</p>
 
 </body>
 
